--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,21 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "api-platform/core": "^2.7",
+        "php": "^8.1",
+        "api-platform/core": "^3.2",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "~2.0",
         "nicklaw5/twitch-api-php": "^7.0",
-        "symfony/dependency-injection": "^5.4 || ^6.0"
+        "symfony/dependency-injection": "^6.4",
+        "symfony/validator": "^6.4"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^5.4"
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-symfony": "^1.3",
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/phpunit-bridge": "^6.2"
     },
     "autoload": {
         "psr-4": { "ProjetNormandie\\TwitchBundle\\": "src/" }
@@ -34,6 +40,19 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": false
+        }
+    },
+    "scripts": {
+        "console": "@php bin/console",
+        "lint:phpstan": "@php vendor/bin/phpstan",
+        "lint:phpcs": "@php vendor/bin/phpcs src/ -p",
+        "lint:phpcs:fix": "@php vendor/bin/phpcbf src/ -p",
+        "lint": [
+            "@lint:phpcs",
+            "@lint:phpstan"
+        ]
     }
 }
