--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.2",
         "api-platform/core": "^3.2",
-        "doctrine/orm": "^2.5",
+        "doctrine/orm": "^2.17 || ^3.0",
         "doctrine/doctrine-bundle": "~2.0",
         "nicklaw5/twitch-api-php": "^7.0",
         "symfony/dependency-injection": "^6.4",
