Add admin channel

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "doctrine/orm": "^2.17 || ^3.0",
         "doctrine/doctrine-bundle": "~2.0",
         "nicklaw5/twitch-api-php": "^7.0",
+        "sonata-project/admin-bundle": "^4.0",
+        "sonata-project/doctrine-orm-admin-bundle": "^4.8",
         "symfony/dependency-injection": "^6.4",
         "symfony/validator": "^6.4"
     },
