--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "sonata-project/admin-bundle": "^4.0",
         "sonata-project/doctrine-orm-admin-bundle": "^4.8",
         "symfony/dependency-injection": "^6.4",
+        "symfony/messenger": "^6.4",
         "symfony/validator": "^6.4"
     },
     "require-dev": {
