--- a/config/admin.yml
+++ b/config/admin.yml
@@ -7,4 +7,21 @@ services:
         manager_type: orm
         group: "group.twitch"
         label: "label.channel"
+  sonata.admin.pn.twitch.game:
+    class: ProjetNormandie\TwitchBundle\Admin\GameAdmin
+    tags:
+      - name: sonata.admin
+        model_class: ProjetNormandie\TwitchBundle\Entity\Game
+        manager_type: orm
+        group: "group.twitch"
+        label: "label.game"
+  sonata.admin.pn.twitch.stream:
+    class: ProjetNormandie\TwitchBundle\Admin\StreamAdmin
+    tags:
+      - name: sonata.admin
+        model_class: ProjetNormandie\TwitchBundle\Entity\Stream
+        manager_type: orm
+        group: "group.twitch"
+        label: "label.stream"
+
 
