--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
-        "api-platform/core": "^3.2",
+        "php": ">=8.3",
+        "api-platform/doctrine-orm": "^4.0",
+        "api-platform/symfony": "^4.0",
         "doctrine/orm": "^2.17 || ^3.0",
         "doctrine/doctrine-bundle": "~2.0",
         "nicklaw5/twitch-api-php": "^7.0",
