--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         "nicklaw5/twitch-api-php": "^7.0",
         "sonata-project/admin-bundle": "^4.0",
         "sonata-project/doctrine-orm-admin-bundle": "^4.8",
-        "symfony/dependency-injection": "^6.4",
-        "symfony/messenger": "^6.4",
-        "symfony/validator": "^6.4"
+        "symfony/dependency-injection": "^6.4 | ^7.2",
+        "symfony/messenger": "^6.4 | ^7.2",
+        "symfony/validator": "^6.4 | ^7.2"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.3",
@@ -30,7 +30,7 @@
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/phpunit-bridge": "^6.2"
+        "symfony/phpunit-bridge": "^6.2 | ^7.2"
     },
     "autoload": {
         "psr-4": { "ProjetNormandie\\TwitchBundle\\": "src/" }
